Add benchmark for vector API